# weather-mcp-server

./: AGENT_INSTRUCTIONS.md  HTTP_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TRIMBLE_COMPLIANCE_REPORT.md  TRIMBLE_INTEGRATION.md  UV_USAGE.md  gunicorn.conf.py  my_server.py  pyproject.toml  railway.json  render.yaml  requirements-http.txt  requirements.txt  server.py  server_http.py  server_mcp_sse.py  startup-gunicorn.sh
examples/: claude_config.json  cursor_config.json  trimble_agent_config.json  trimble_api_example.py  usage_examples.json
tests/: test_server.py
tools/: __init__.py  common.py  compare_weather.py  get_air_quality.py  get_current_weather.py  get_forecast.py  get_weather_by_coordinates.py  search_location.py
